added coins,key and door,maze

--- a/CSC8503/CMakeLists.txt
+++ b/CSC8503/CMakeLists.txt
@@ -9,6 +9,8 @@ set(Header_Files
     "NetworkPlayer.h"
     "StateGameObject.h"
     "TutorialGame.h"
+	"Character.h"
+	"Door.h"
 )
 source_group("Header Files" FILES ${Header_Files})
 
@@ -19,6 +21,8 @@ set(Source_Files
     "NetworkPlayer.cpp"
     "StateGameObject.cpp"
     "TutorialGame.cpp"
+	"Character.cpp"
+	"Door.cpp"
 )
 
 if(USE_VULKAN)
